fix z index issue on web banner overlapping with search bar

--- a/styles/_top-banner.scss
+++ b/styles/_top-banner.scss
@@ -6,7 +6,7 @@
   background: #32E685 !important;
   padding: 7px 35px;
   font-family: "Space Grotesk";
-  z-index: 9999;
+  z-index: 1;
   cursor: pointer;
   
   &:hover {
